@@ -1,6 +1,10 @@
 Revision history for Spreadsheet-HTML
 
 0.34
+    - !API change: 
+        -rowX is now -rX
+        -colX is now -cX
+        -rowXcolX is now -rXcX
     - can style calendar by day
     - animate background and/or foreground
     - added wrap literal param
